# nautobot-plugin-chatops-grafana

./: .gitignore  .travis.yml  README.md  invoke.example.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
development/: Dockerfile  creds.example.env  dev.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.mattermost.yml  docker-compose.requirements.yml  mattermost_backup.dump  nautobot_backup.dump  nautobot_config.py  prometheus.yml
development/grafana/provisioning/dashboards/: all.yml
development/grafana/provisioning/datasources/: all.yml
development/mattermost/config/: config.json
docs/: advanced_usage.md  contributing.md  faq.md  getting_started.md  index.md  installation.md  screenshots.md
nautobot_chatops_extension_grafana/: __init__.py  gen_panels_from_dashboard.py  grafana.py  panels.yml  panels_schema.yml  urls.py  validator.py  worker.py
nautobot_chatops_extension_grafana/api/: __init__.py
nautobot_chatops_extension_grafana/management/commands/: grafana.wip  validate_schema.py
nautobot_chatops_extension_grafana/schema/schemas/: panels.yml
nautobot_chatops_extension_grafana/tests/: __init__.py  test_api.py  test_basic.py  test_workers.py
nautobot_plugin_chatops_grafana/: __init__.py  exceptions.py  filters.py  forms.py  grafana.py  helpers.py  models.py  navigation.py  network-automation-dashboard.json  panels.yml  tables.py  urls.py  views.py  worker.py
nautobot_plugin_chatops_grafana/api/: __init__.py  urls.py
nautobot_plugin_chatops_grafana/api/views/: __init__.py  generic.py  grafana.py
nautobot_plugin_chatops_grafana/diffsync/: models.py  sync.py
nautobot_plugin_chatops_grafana/management/commands/: import_panels.py  validate_schema.py
nautobot_plugin_chatops_grafana/migrations/: 0001_initial.py
nautobot_plugin_chatops_grafana/templates/nautobot_plugin_chatops_grafana/: dashboard_list.html  dashboards.html  dashboards_edit.html  panel_list.html  panels.html  panels_edit.html  panels_sync.html  sync.html  variable_list.html  variables.html  variables_edit.html  variables_sync.html
nautobot_plugin_chatops_grafana/tests/: __init__.py  test_api.py  test_basic.py  test_workers.py
